--- a/my-app/angular.json
+++ b/my-app/angular.json
@@ -61,6 +61,38 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "pre": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.pre.ts"
+                }
+              ],
+              "baseHref": "./",
+              "deployUrl": "./",
+              "optimization":true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": false,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+
+             
             }
           }
         },
@@ -72,6 +104,9 @@
           "configurations": {
             "production": {
               "browserTarget": "my-app:build:production"
+            },
+            "pre": {
+              "browserTarget": "my-app:build:pre"
             }
           }
         },
